segundo commmit con modific

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -19,7 +19,7 @@
       </ul>
     </nav>
     </header>
-<main class="about-main">
+<main>
     <section class="about-content">
       <div class="about-text">
         <h1>Biografía</h1>
@@ -35,8 +35,8 @@ Sigo aprendiendo cada día y me encanta trabajar en la intersección entre la me
     </section>
   </main>
 <footer>
-    <div class="footer-left">© 2025 Karen Lopedote</div>
-    <div class="footer-right">Política de privacidad</div>
+    <div>© 2025 Karen Lopedote</div>
+    <div>Política de privacidad</div>
   </footer>
 </body>
 </html>
