--- a/Pages/proyects.html
+++ b/Pages/proyects.html
@@ -37,8 +37,8 @@
     </section>
 </main>
 <footer>
-    <div class="footer-left">© 2025 Karen Lopedote</div>
-    <div class="footer-right">Política de privacidad</div>
+    <div>© 2025 Karen Lopedote</div>
+    <div>Política de privacidad</div>
   </footer>
 </body>
 </html>
