--- a/Pages/certificates.html
+++ b/Pages/certificates.html
@@ -33,8 +33,8 @@
     </section>
   </main>
   <footer>
-    <div class="footer-left">© 2025 Creado por Karen Lopedote</div>
-    <div class="footer-right">Política de privacidad</div>
+    <div>© 2025 Karen Lopedote</div>
+    <div>Política de privacidad</div>
   </footer>
 </body>
 </html>
