--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -23,22 +23,21 @@
     <div class="contact-container">
       <div class="contact-info">
         <h1>Contacto</h1>
-        <p>Claudia Lara está representada por Creativos Unidos.</p>
-        <p>Email: <a href="mailto:info@misitio.com">info@misitio.com</a><br>
-        Tel: +52-1-33-12345678</p>
+        <p>Aqui podras despejar todas tus dudas y consultas.</p>
+        <p>Email: <a href="mailto:info@misitio.com">info@misitio.com</a>
+        Tel: +54 01152745894</p>
       </div>
-
       <form class="contact-form">
         <div class="form-group">
-          <input type="text" placeholder="Nombre" required>
-          <input type="text" placeholder="Apellido" required>
+          <input type="text">
+          <input type="text">
         </div>
         <div class="form-group">
-          <input type="email" placeholder="Email *" required>
-          <input type="tel" placeholder="Teléfono">
+          <input type="email">
+          <input type="tel">
         </div>
         <div class="form-group full">
-          <textarea rows="5" placeholder="Déjanos un mensaje..." required></textarea>
+          <textarea rows="5"></textarea>
         </div>
         <button type="submit">Enviar</button>
       </form>
@@ -46,8 +45,8 @@
   </main>
 
 <footer>
-    <div class="footer-left">© 2025 Karen Lopedote</div>
-    <div class="footer-right">Política de privacidad</div>
+    <div>© 2025 Karen Lopedote</div>
+    <div>Política de privacidad</div>
   </footer>
 </body>
 </html>
