Actualización con sass y java

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -20,9 +20,10 @@
     </nav>
     </header>
 <main>
-    <section class="about-content">
+    <section class="section-dark about-content">
+             <h1 class= "section-title" >Biografía</h1>
       <div class="about-text">
-        <h1>Biografía</h1>
+ 
         <p>Mi pasión siempre fue entender cómo las personas piensan, sienten y se comportan. Eso me llevó a estudiar Psicología, y con el tiempo descubrí que esa misma vocación puede aplicarse al diseño de experiencias digitales que realmente conecten con los usuarios.
 
 Hoy combino mi formación en ciencias humanas con herramientas de diseño centrado en el usuario. Mi objetivo es crear productos digitales que no solo funcionen bien, sino que también sean intuitivos, accesibles y empáticos.
