--- a/Pages/certificates.html
+++ b/Pages/certificates.html
@@ -20,7 +20,7 @@
     </nav>
     </header>
   <main class="certificates-section">
-    <h1 class="certificates-title">Certificaciones</h1>
+    <h1 class="section-title" >Certificaciones</h1>
     <section class="certificates-grid">
       <div class="certificate-card">
         <h2>Licenciatura en Psicología</h2>
