--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -22,22 +22,22 @@
 <main class="contact-section">
     <div class="contact-container">
       <div class="contact-info">
-        <h1>Contacto</h1>
+        <h1 class="section-title ">Contacto</h1>
         <p>Aqui podras despejar todas tus dudas y consultas.</p>
         <p>Email: <a href="mailto:info@misitio.com">info@misitio.com</a>
         Tel: +54 01152745894</p>
       </div>
       <form class="contact-form">
         <div class="form-group">
-          <input type="text">
-          <input type="text">
+          <input type="text"placeholder="Nombre">
+          <input type="text"placeholder="Apellido">
         </div>
         <div class="form-group">
-          <input type="email">
-          <input type="tel">
+          <input type="email"placeholder="Email">
+          <input type="tel"placeholder="Telefono">
         </div>
         <div class="form-group full">
-          <textarea rows="5"></textarea>
+          <textarea placeholder="Tu Mensaje"rows="5"></textarea>
         </div>
         <button type="submit">Enviar</button>
       </form>
