--- a/Pages/proyects.html
+++ b/Pages/proyects.html
@@ -20,18 +20,18 @@
     </nav>     
     </header>
 <main class="projects-section">
-    <h1 class="projects-title">Proyectos Recientes</h1>
+    <h1 class="section-title">Proyectos Recientes</h1>
     <section class="projects-grid">
       <div class="project-card">
-        <img src="../images/ramen.jpg" alt="Proyecto Ramen">
+        <img src="../imagenes/preentrega 1 entregar (1)_LOGO.jpg" alt="Proyecto Ramen">
         <p>Ramen</p>
       </div>
       <div class="project-card">
-        <img src="../images/propapp.jpg" alt="Proyecto PropAPP">
+        <img src="../imagenes/Mobile App Screen Mockup, Mosaic.jpg" alt="Proyecto PropAPP">
         <p>PropAPP</p>
       </div>
       <div class="project-card">
-        <img src="../images/coto.jpg" alt="Proyecto Coto Digital">
+        <img src="../imagenes/proyecto coto.JPG" alt="Proyecto Coto Digital">
         <p>Coto Digital</p>
       </div>
     </section>
