ultimas modificaciones SEO y Bibliotecas

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
+    <meta name="description" content="Conoce a Karen Lopedote. Descubre cómo su formación en Psicología influye en su enfoque del diseño UX/UI para crear productos digitales empáticos y centrados en el usuario.">
+    <meta name="keywords" content="Karen Lopedote, biografía, sobre mí, diseñadora UX UI, psicología y diseño, diseño centrado en el usuario, empatía, experiencias digitales">
 <link rel="stylesheet" href="../style.css">
 </head>
 <body>
