--- a/Pages/certificates.html
+++ b/Pages/certificates.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Certificates</title>
+    <meta name="description" content="Explora las certificaciones de Karen Lopedote. Formación académica que incluye una Licenciatura en Psicología y la carrera de Desarrollo Web (HTML, CSS, JS, React).">
+    <meta name="keywords" content="certificaciones, Karen Lopedote, estudios, Licenciatura en Psicología, Desarrollo Web, Coderhouse, HTML, CSS, JavaScript, React">
         <link rel="stylesheet" href="../style.css">
 </head>
 <body>
