--- a/Pages/proyects.html
+++ b/Pages/proyects.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyects</title>
+    <meta name="description" content="Explora los proyectos de diseño UX/UI de Karen Lopedote. Un portafolio que incluye trabajos como Ramen, PropAPP y el rediseño de Coto Digital.">
+    <meta name="keywords" content="proyectos, portafolio, Karen Lopedote, diseño UX UI, trabajos de diseño, case study, Ramen, PropAPP, Coto Digital">
         <link rel="stylesheet" href="../style.css">
 </head>
 <body>
