--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <meta name="description" content="Portafolio de Karen Lopedote (KL), diseñadora UX/UI creativa y apasionada. Explora mis proyectos, certificados y contáctame para colaborar.">
+    <meta name="keywords" content="diseñadora UX UI, portfolio, Karen Lopedote, diseño de experiencia de usuario, diseño de interfaz, proyectos de diseño, diseño web, creativa">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -22,10 +24,24 @@
 
     <main>
         <article>
-            <h2 class="intro-title">
+             <div class="hero-container">
+            <h1 class="intro-title">
                 <span id="typed-output"></span>
-            </h2>
+            </h1>
             <img src="imagenes/grupo-de-diversos-disenadores-teniendo-una-discusion.jpg" alt="Equipo de diseñadores colaborando" class="img-fluid">
+        </div>
+         <h2 class="section-title">Clientes Recientes</h2>
+            <div class="carousel">
+                <div class="carousel__track">
+            <div class="carousel__slide">
+                    <img src="imagenes/logo-1726969891-1730920827-bfd5c50500449d314ddaed20e1ae66991730920827.png" alt="Proyecto 1"></div> 
+                    <div class="carousel__slide">
+                    <img src="imagenes/preentrega 1 entregar (1)_NEGATIVO.jpg" alt="Proyecto 2"></div>
+                    <div class="carousel__slide">
+                    <img src="imagenes/Captura.JPG" alt="Proyecto 3"></div>
+                </div>
+            </div>
+            </div>
         </article>
     </main>
 
